<resources>
    <string name="app_name">DayDayUp</string>
    <string name="no_network">操作失败，请检查网络</string>
    <string name="service_error">服务器繁忙，请稍后重试</string>
    <string name="connect_error">网络连接错误</string>
    <string name="connect_timeout">网络连接超时</string>
    <string name="bad_network">连接断开</string>
    <string name="parse_error">解析数据错误</string>
    <string name="unknown_error">未知网络错误</string>
    <string name="picker_text_parse">解析数据</string>
    <string name="picker_text_show">显示地址选择器</string>
    <string name="address">地址</string>
    <string name="login">登陆</string>
    <string name="video_play">视频播放</string>
    <string name="drag_item">列表拖动</string>
    <string name="app_grade">APP评分</string>
    <string name="no_install_app_market">您的手机没有安装Android应用市场</string>
    <string name="change_language">切换语言</string>
    <string name="show_chinese">中文显示</string>
    <string name="show_tw_chinese">繁体显示</string>
    <string name="show_english">英文显示</string>
    <string name="system_auto">系统默认</string>
    <string name="picture_cache_show">图片缓存演示</string>
</resources>
