<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yjbest.daydayup.MainActivity">

    <TextView
        android:id="@+id/tv_hello_word"
        android:layout_width="111dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:padding="12dp"
        android:background="@color/colorPrimary"
        android:text="@string/video_play"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/to_login"
        android:layout_width="111dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:padding="12dp"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/tv_hello_word"
        app:layout_constraintStart_toStartOf="@+id/tv_hello_word"
        app:layout_constraintTop_toBottomOf="@+id/tv_hello_word" />

    <TextView
        android:id="@+id/tv_select_province"
        android:layout_width="111dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/address"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/to_login"
        app:layout_constraintStart_toStartOf="@+id/to_login"
        app:layout_constraintTop_toBottomOf="@+id/to_login" />

    <TextView
        android:id="@+id/tv_drag_item"
        android:layout_width="111dp"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/drag_item"/>

</LinearLayout>